force-app/main/default/objects/FAA_Child_Program_Request__c/FAA_Child_Program_Request__c.object-meta.xml
<CustomObject>
    <label>FAA Child Program Request</label>
    <nameField>
        <label>FAA Child Program Requests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAA Child Program Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>