force-app/main/default/objects/FAA_Child_Program_Request__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipName>FAF_Child_Program_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>