force-app/main/default/objects/FAA_Child_Program_Request__c/fields/CircEsteem_Program_Choice_3__c.field-meta.xml
<CustomField>
    <fullName>CircEsteem_Program_Choice_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CircEsteem Program Choice #3</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>FAF_Child_Program_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>