force-app/main/default/objects/FAA_Child_Program_Request__c/fields/Financial_Aid_Application__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Application__c</fullName>
    <label>Financial Aid Application</label>
    <referenceTo>Financial_Aid_Application__c</referenceTo>
    <relationshipLabel>FAA Child Program Requests</relationshipLabel>
    <relationshipName>FAF_Child_Program_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>