force-app/main/default/objects/FAA_Child_Program_Request__c/fields/Parent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FAA Child Program Requests</relationshipLabel>
    <relationshipName>FAA_Child_Program_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>